--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.host.url=http://157.253.238.75:8080/sonar-misovirtual/
-sonar.projectKey=202214_BaseProject:sonar
+sonar.projectKey=jc-nieto_TutorialCanciones
+sonar.organization=jc-nieto
 sonar.projectName=202214_BaseProject
 sonar.projectVersion=1.0
 sonar.sources=src
